Ajustes a la UI, se integra bower

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,43 @@
 <footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h6>Temas <span class="fui-arrow-right"></span></h6>
+                <ul>
+                    <li>Java</li>
+                    <li>Spring Framework</li>
+                    <li>Programación Funcional</li>
+                    <li>Scala</li>
+                </ul>
+            </div>
+            <!-- /col-md-4 -->
 
-  <div class="container">
+            <div class="col-md-3">
+                <h6>Hecho con <span class="fui-arrow-right"></span></h6>
+                <ul>
+                    <li>Jekyll</li>
+                    <li>Bootstrap</li>
+                    <li>Flat UI Kit</li>
+                    <li>GitHub Pages (Hosting)</li>
+                </ul>
+            </div>
+            <!-- /col-md-3 -->
 
+            <div class="col-md-5">
+                <div class="footer-banner">
+                    <div class="social"><a target="_blank" href="https://twitter.com/{{ site.twitter_username }}"
+                                           title="Twitter"><span class="fui-twitter"></span></a><a target="_blank"
+                                                                                                   href="https://github.com/{{ site.github_username }}"
+                                                                                                   title="GitHub"><span
+                            class="fui-github"></span></a></div>
+                    <p class="fullname"><span class="fname">@alex</span><span class="lname">mera</span></p>
 
-  </div>
+                    <p>Un blog más sobre desarrollo de software con especial énfasis en <strong>Java + Spring</strong> y
+                        mis nuevos favoritos: <strong>Programación Funcional y Scala</strong>.</p>
 
+                    <p><span class="fui-location"></span> Cali, Colombia</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
