--- a/_less/variables.less
+++ b/_less/variables.less
@@ -44,7 +44,8 @@
 
 // Brand colors
 @brand-primary:             @wet-asphalt;
-@brand-secondary:           @turquoise;
+//@brand-secondary:           @turquoise;
+@brand-secondary:           @peter-river;
 @brand-success:             @emerald;
 @brand-warning:             @sun-flower;
 @brand-danger:              @alizarin;
@@ -86,20 +87,20 @@
 @local-font-name-bold-italic:   "lato-bolditalic";
 @local-font-svg-id-bold-italic: "latobold-italic";
 
-@font-size-h1:                  floor((@font-size-base * 3.444)); // ~62px
-@font-size-h2:                  ceil((@font-size-base * 2.889)); // ~52px
-@font-size-h3:                  ceil((@font-size-base * 2.222)); // ~40px
-@font-size-h4:                  ceil((@font-size-base * 1.611)); // ~29px
-@font-size-h5:                  floor((@font-size-base * 1.556)); // ~28px
-@font-size-h6:                  ceil((@font-size-base * 1.333)); // ~24px
+@font-size-h1:                  floor((@font-size-base * 2.4));
+@font-size-h2:                  ceil((@font-size-base * 2));
+@font-size-h3:                  ceil((@font-size-base * 1.8));
+@font-size-h4:                  ceil((@font-size-base * 1.6));
+@font-size-h5:                  floor((@font-size-base * 1.4));
+@font-size-h6:                  ceil((@font-size-base * 1.2));
 
-@line-height-base:              1.72222; // 31/18
-@line-height-computed:          floor((@font-size-base * @line-height-base)); // ~31px
+@line-height-base:              1.4;
+@line-height-computed:          floor((@font-size-base * @line-height-base));
 
 @headings-font-family:          inherit;
-@headings-font-weight:          700;
+@headings-font-weight:          400;
 @headings-line-height:          1.1;
-@headings-color:                inherit;
+@headings-color:                @pomegranate;
 
 
 //== Iconography
