--- a/_less/blog.less
+++ b/_less/blog.less
@@ -8,7 +8,7 @@
       @time-base-size: 14px;
       line-height: 1;
       font-size: @time-base-size;
-      margin-top: (@line-height-computed / 2);
+      margin-top: 16px;
       .day {
         font-weight: 700;
       }
@@ -23,10 +23,13 @@
       }
     }
     header, p {
-      margin-left: 65px;
+      margin-left: 63px;
     }
     header a {
       color: @headings-color;
+    }
+    h2, h3 {
+      margin-top: (@line-height-computed / 2);
     }
   }
   article:first-child {
