--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <div class="container" role="main">
+    <div class="container" >
         {{ content }}
     </div>
 
