--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,16 @@
 ---
 layout: default
 ---
-<div class="post">
+{% include breadcrumb.html %}
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<main role="main" class="post">
+    <article>
+        <header>
+            <h1 class="post-title">{{ page.title }}</h1>
+        </header>
+        <section class="post-content">
+            {{ content }}
+        </section>
+    </article>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
-</div>
+</main>
