--- a/css/blog.css
+++ b/css/blog.css
@@ -1067,15 +1067,15 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 43px;
+  font-size: 41px;
 }
 h2,
 .h2 {
-  font-size: 36px;
+  font-size: 33px;
 }
 h3,
 .h3 {
-  font-size: 33px;
+  font-size: 29px;
 }
 h4,
 .h4 {
@@ -7189,7 +7189,6 @@ h6,
   font-weight: 400;
   line-height: 1.1;
   color: #c0392b;
-  text-transform: uppercase;
 }
 h1 small,
 h2 small,
@@ -7210,6 +7209,7 @@ h2,
 h3 {
   margin-top: 25px;
   margin-bottom: 12.5px;
+  text-transform: uppercase;
 }
 h4,
 h5,
@@ -7222,15 +7222,15 @@ h6 {
 }
 h1,
 .h1 {
-  font-size: 43px;
+  font-size: 41px;
 }
 h2,
 .h2 {
-  font-size: 36px;
+  font-size: 33px;
 }
 h3,
 .h3 {
-  font-size: 33px;
+  font-size: 29px;
 }
 h4,
 .h4 {
@@ -12838,14 +12838,14 @@ fieldset[disabled] .navbar-inverse .navbar-btn.active {
 }
 footer {
   background-color: #2c3e50;
-  color: #b7bdc4;
+  color: #969fa8;
   font-size: 15px;
   padding: 0;
   margin-top: 25px;
 }
 footer a {
-  color: #9aa4af;
-  font-weight: 700;
+  color: #969fa8;
+  font-weight: 400;
 }
 footer p {
   font-size: 15px;
@@ -12853,8 +12853,32 @@ footer p {
   margin-bottom: 10px;
 }
 footer h6 {
-  color: #abb2b9;
+  margin-top: 15px;
+  color: #16a085;
   font-weight: 300;
+  text-transform: uppercase;
+}
+footer h6 .ico {
+  font-size: 18px;
+}
+footer .col ul {
+  list-style-type: none;
+  margin: 0 0 26px;
+  padding: 0;
+}
+footer .col ul li {
+  border-top: 1px solid #395067;
+  line-height: 19px;
+  padding: 6px 0;
+}
+footer .col ul li:first-child {
+  border-top: none;
+  padding-top: 1px;
+}
+footer .col ul li .ico {
+  color: #395067;
+  font-size: 12px;
+  margin-right: 3px;
 }
 .footer-title {
   margin: 0 0 22px;
@@ -13168,7 +13192,7 @@ footer .social a {
   color: #34495e;
   line-height: 1;
   font-size: 14px;
-  margin-top: 12.5px;
+  margin-top: 16px;
 }
 .blog article time .day {
   font-weight: 700;
@@ -13184,10 +13208,14 @@ footer .social a {
 }
 .blog article header,
 .blog article p {
-  margin-left: 65px;
+  margin-left: 63px;
 }
 .blog article header a {
   color: #c0392b;
+}
+.blog article h2,
+.blog article h3 {
+  margin-top: 12.5px;
 }
 .blog article:first-child {
   border-top: none;
