--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,15 @@ layout: default
 ---
 {% include breadcrumb.html %}
 
-<main role="main" class="post">
+<main role="main" class="blog-post">
     <article>
         <header>
+            <div class="post-meta">
+                <time datetime="{{ page.date | date: '%F' }}"><span class="fui-calendar ico"></span> <span class="date">{{ page.date | date: '%d/%m/%Y' }}</span></time>
+                <p class="tags">
+                    <span class="fui-tag ico"></span> java &middot; spring &middot; gradle &middot; osx
+                </p>
+            </div>
             <h1 class="post-title">{{ page.title }}</h1>
         </header>
         <section class="post-content">
