--- a/_less/blog-post.less
+++ b/_less/blog-post.less
@@ -17,4 +17,18 @@
       margin: 0 0 0 10px;
     }
   }
+
+  .footnotes {
+    font-size: 14px;
+    font-weight: 300;
+    padding-top: (@line-height-computed / 2);
+    margin-top: @line-height-computed;
+    border-top: 1px solid @silver;
+
+    ol li p {
+      font-size: 16px;
+      font-weight: 300;
+      margin-bottom: 0;
+    }
+  }
 }
