--- a/_less/styles.less
+++ b/_less/styles.less
@@ -1,6 +1,7 @@
 @import "../bower_components/bootstrap/less/bootstrap.less";
 @import "flat-ui";
 @import "brand";
+@import "breadcrumb";
 @import "blog";
 @import "blog-post";
 
