--- a/css/blog.css
+++ b/css/blog.css
@@ -13293,6 +13293,9 @@ footer .social a {
   font-weight: 300;
   margin-bottom: 0;
 }
+.blog-post .MathJax {
+  color: #34495e;
+}
 body {
   margin-top: 12px;
   background-color: #ecf0f1;
