--- a/_less/blog.less
+++ b/_less/blog.less
@@ -31,6 +31,9 @@
     h2, h3 {
       margin-top: (@line-height-computed / 2);
     }
+    p {
+        font-size: 20px;
+    }
   }
   article:first-child {
     border-top: none;
