--- a/css/blog.css
+++ b/css/blog.css
@@ -13229,6 +13229,9 @@ footer .social a {
 .blog article h3 {
   margin-top: 12.5px;
 }
+.blog article p {
+  font-size: 20px;
+}
 .blog article:first-child {
   border-top: none;
 }
@@ -13308,93 +13311,129 @@ body {
   font-weight: 300;
 }
 /*# sourceMappingURL=styles.css.map */
-/* Solarized Light
-
-https://gist.github.com/alexmera/9c3ec11de4575dc4cd76
-
-For use with Jekyll and Pygments
-
-http://ethanschoonover.com/solarized
-
-SOLARIZED HEX      ROLE
---------- -------- ------------------------------------------
-base01    #586e75  body text / default code / primary content
-base1     #93a1a1  comments / secondary content
-base3     #fdf6e3  background
-orange    #cb4b16  constants
-red       #dc322f  regex, special keywords
-blue      #268bd2  reserved keywords
-cyan      #2aa198  strings, numbers
-green     #859900  operators, other keywords
-*/
-
-.highlight { background-color: #fdf6e3; color: #586e75 }
-.highlight .lineno { color: #93a1a1 } /* Line Numbers */
-.highlight .c { color: #93a1a1 } /* Comment */
-.highlight .err { color: #586e75 } /* Error */
-.highlight .g { color: #586e75 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
-.highlight .l { color: #586e75 } /* Literal */
-.highlight .n { color: #586e75 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #cb4b16 } /* Other */
-.highlight .p { color: #586e75 } /* Punctuation */
-.highlight .cm { color: #93a1a1 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #93a1a1 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2aa198 } /* Generic.Deleted */
-.highlight .ge { color: #586e75; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #dc322f } /* Generic.Error */
-.highlight .gh { color: #cb4b16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
-.highlight .go { color: #586e75 } /* Generic.Output */
-.highlight .gp { color: #586e75 } /* Generic.Prompt */
-.highlight .gs { color: #586e75; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #cb4b16 } /* Generic.Subheading */
-.highlight .gt { color: #586e75 } /* Generic.Traceback */
-.highlight .kc { color: #cb4b16 } /* Keyword.Constant */
-.highlight .kd { color: #268bd2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
-.highlight .kr { color: #268bd2 } /* Keyword.Reserved */
-.highlight .kt { color: #dc322f } /* Keyword.Type */
-.highlight .ld { color: #586e75 } /* Literal.Date */
-.highlight .m { color: #2aa198 } /* Literal.Number */
-.highlight .s { color: #2aa198 } /* Literal.String */
-.highlight .na { color: #586e75 } /* Name.Attribute */
-.highlight .nb { color: #B58900 } /* Name.Builtin */
-.highlight .nc { color: #268bd2 } /* Name.Class */
-.highlight .no { color: #cb4b16 } /* Name.Constant */
-.highlight .nd { color: #268bd2 } /* Name.Decorator */
-.highlight .ni { color: #cb4b16 } /* Name.Entity */
-.highlight .ne { color: #cb4b16 } /* Name.Exception */
-.highlight .nf { color: #268bd2 } /* Name.Function */
-.highlight .nl { color: #586e75 } /* Name.Label */
-.highlight .nn { color: #586e75 } /* Name.Namespace */
-.highlight .nx { color: #586e75 } /* Name.Other */
-.highlight .py { color: #586e75 } /* Name.Property */
-.highlight .nt { color: #268bd2 } /* Name.Tag */
-.highlight .nv { color: #268bd2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
-.highlight .w { color: #586e75 } /* Text.Whitespace */
-.highlight .mf { color: #2aa198 } /* Literal.Number.Float */
-.highlight .mh { color: #2aa198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2aa198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2aa198 } /* Literal.Number.Oct */
-.highlight .sb { color: #93a1a1 } /* Literal.String.Backtick */
-.highlight .sc { color: #2aa198 } /* Literal.String.Char */
-.highlight .sd { color: #586e75 } /* Literal.String.Doc */
-.highlight .s2 { color: #2aa198 } /* Literal.String.Double */
-.highlight .se { color: #cb4b16 } /* Literal.String.Escape */
-.highlight .sh { color: #586e75 } /* Literal.String.Heredoc */
-.highlight .si { color: #2aa198 } /* Literal.String.Interpol */
-.highlight .sx { color: #2aa198 } /* Literal.String.Other */
-.highlight .sr { color: #dc322f } /* Literal.String.Regex */
-.highlight .s1 { color: #2aa198 } /* Literal.String.Single */
-.highlight .ss { color: #2aa198 } /* Literal.String.Symbol */
-.highlight .bp { color: #268bd2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #268bd2 } /* Name.Variable.Class */
-.highlight .vg { color: #268bd2 } /* Name.Variable.Global */
-.highlight .vi { color: #268bd2 } /* Name.Variable.Instance */
-.highlight .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+pre .hll { background-color: #ffffcc }
+pre  { background: #f0f0f0; }
+pre .c { color: #60a0b0; font-style: italic } /* Comment */
+pre .err { border: 1px solid #FF0000 } /* Error */
+pre .k { color: #007020; font-weight: bold } /* Keyword */
+pre .o { color: #666666 } /* Operator */
+pre .cm { color: #60a0b0; font-style: italic } /* Comment.Multiline */
+pre .cp { color: #007020 } /* Comment.Preproc */
+pre .c1 { color: #60a0b0; font-style: italic } /* Comment.Single */
+pre .cs { color: #60a0b0; background-color: #fff0f0 } /* Comment.Special */
+pre .gd { color: #A00000 } /* Generic.Deleted */
+pre .ge { font-style: italic } /* Generic.Emph */
+pre .gr { color: #FF0000 } /* Generic.Error */
+pre .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+pre .gi { color: #00A000 } /* Generic.Inserted */
+pre .go { color: #888888 } /* Generic.Output */
+pre .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
+pre .gs { font-weight: bold } /* Generic.Strong */
+pre .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
+pre .gt { color: #0044DD } /* Generic.Traceback */
+pre .kc { color: #007020; font-weight: bold } /* Keyword.Constant */
+pre .kd { color: #007020; font-weight: bold } /* Keyword.Declaration */
+pre .kn { color: #007020; font-weight: bold } /* Keyword.Namespace */
+pre .kp { color: #007020 } /* Keyword.Pseudo */
+pre .kr { color: #007020; font-weight: bold } /* Keyword.Reserved */
+pre .kt { color: #902000 } /* Keyword.Type */
+pre .m { color: #40a070 } /* Literal.Number */
+pre .s { color: #4070a0 } /* Literal.String */
+pre .na { color: #4070a0 } /* Name.Attribute */
+pre .nb { color: #007020 } /* Name.Builtin */
+pre .nc { color: #0e84b5; font-weight: bold } /* Name.Class */
+pre .no { color: #60add5 } /* Name.Constant */
+pre .nd { color: #555555; font-weight: bold } /* Name.Decorator */
+pre .ni { color: #d55537; font-weight: bold } /* Name.Entity */
+pre .ne { color: #007020 } /* Name.Exception */
+pre .nf { color: #06287e } /* Name.Function */
+pre .nl { color: #002070; font-weight: bold } /* Name.Label */
+pre .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
+pre .nt { color: #062873; font-weight: bold } /* Name.Tag */
+pre .nv { color: #bb60d5 } /* Name.Variable */
+pre .ow { color: #007020; font-weight: bold } /* Operator.Word */
+pre .w { color: #bbbbbb } /* Text.Whitespace */
+pre .mb { color: #40a070 } /* Literal.Number.Bin */
+pre .mf { color: #40a070 } /* Literal.Number.Float */
+pre .mh { color: #40a070 } /* Literal.Number.Hex */
+pre .mi { color: #40a070 } /* Literal.Number.Integer */
+pre .mo { color: #40a070 } /* Literal.Number.Oct */
+pre .sb { color: #4070a0 } /* Literal.String.Backtick */
+pre .sc { color: #4070a0 } /* Literal.String.Char */
+pre .sd { color: #4070a0; font-style: italic } /* Literal.String.Doc */
+pre .s2 { color: #4070a0 } /* Literal.String.Double */
+pre .se { color: #4070a0; font-weight: bold } /* Literal.String.Escape */
+pre .sh { color: #4070a0 } /* Literal.String.Heredoc */
+pre .si { color: #70a0d0; font-style: italic } /* Literal.String.Interpol */
+pre .sx { color: #c65d09 } /* Literal.String.Other */
+pre .sr { color: #235388 } /* Literal.String.Regex */
+pre .s1 { color: #4070a0 } /* Literal.String.Single */
+pre .ss { color: #517918 } /* Literal.String.Symbol */
+pre .bp { color: #007020 } /* Name.Builtin.Pseudo */
+pre .vc { color: #bb60d5 } /* Name.Variable.Class */
+pre .vg { color: #bb60d5 } /* Name.Variable.Global */
+pre .vi { color: #bb60d5 } /* Name.Variable.Instance */
+pre .il { color: #40a070 } /* Literal.Number.Integer.Long */.highlight pre .hll { background-color: #49483e }
+.highlight pre  { background: #272822; color: #f8f8f2 }
+.highlight pre .c { color: #75715e } /* Comment */
+.highlight pre .err { color: #960050; background-color: #1e0010 } /* Error */
+.highlight pre .k { color: #66d9ef } /* Keyword */
+.highlight pre .l { color: #ae81ff } /* Literal */
+.highlight pre .n { color: #f8f8f2 } /* Name */
+.highlight pre .o { color: #f92672 } /* Operator */
+.highlight pre .p { color: #f8f8f2 } /* Punctuation */
+.highlight pre .cm { color: #75715e } /* Comment.Multiline */
+.highlight pre .cp { color: #75715e } /* Comment.Preproc */
+.highlight pre .c1 { color: #75715e } /* Comment.Single */
+.highlight pre .cs { color: #75715e } /* Comment.Special */
+.highlight pre .gd { color: #f92672 } /* Generic.Deleted */
+.highlight pre .ge { font-style: italic } /* Generic.Emph */
+.highlight pre .gi { color: #a6e22e } /* Generic.Inserted */
+.highlight pre .gs { font-weight: bold } /* Generic.Strong */
+.highlight pre .gu { color: #75715e } /* Generic.Subheading */
+.highlight pre .kc { color: #66d9ef } /* Keyword.Constant */
+.highlight pre .kd { color: #66d9ef } /* Keyword.Declaration */
+.highlight pre .kn { color: #f92672 } /* Keyword.Namespace */
+.highlight pre .kp { color: #66d9ef } /* Keyword.Pseudo */
+.highlight pre .kr { color: #66d9ef } /* Keyword.Reserved */
+.highlight pre .kt { color: #66d9ef } /* Keyword.Type */
+.highlight pre .ld { color: #e6db74 } /* Literal.Date */
+.highlight pre .m { color: #ae81ff } /* Literal.Number */
+.highlight pre .s { color: #e6db74 } /* Literal.String */
+.highlight pre .na { color: #a6e22e } /* Name.Attribute */
+.highlight pre .nb { color: #f8f8f2 } /* Name.Builtin */
+.highlight pre .nc { color: #a6e22e } /* Name.Class */
+.highlight pre .no { color: #66d9ef } /* Name.Constant */
+.highlight pre .nd { color: #a6e22e } /* Name.Decorator */
+.highlight pre .ni { color: #f8f8f2 } /* Name.Entity */
+.highlight pre .ne { color: #a6e22e } /* Name.Exception */
+.highlight pre .nf { color: #a6e22e } /* Name.Function */
+.highlight pre .nl { color: #f8f8f2 } /* Name.Label */
+.highlight pre .nn { color: #f8f8f2 } /* Name.Namespace */
+.highlight pre .nx { color: #a6e22e } /* Name.Other */
+.highlight pre .py { color: #f8f8f2 } /* Name.Property */
+.highlight pre .nt { color: #f92672 } /* Name.Tag */
+.highlight pre .nv { color: #f8f8f2 } /* Name.Variable */
+.highlight pre .ow { color: #f92672 } /* Operator.Word */
+.highlight pre .w { color: #f8f8f2 } /* Text.Whitespace */
+.highlight pre .mb { color: #ae81ff } /* Literal.Number.Bin */
+.highlight pre .mf { color: #ae81ff } /* Literal.Number.Float */
+.highlight pre .mh { color: #ae81ff } /* Literal.Number.Hex */
+.highlight pre .mi { color: #ae81ff } /* Literal.Number.Integer */
+.highlight pre .mo { color: #ae81ff } /* Literal.Number.Oct */
+.highlight pre .sb { color: #e6db74 } /* Literal.String.Backtick */
+.highlight pre .sc { color: #e6db74 } /* Literal.String.Char */
+.highlight pre .sd { color: #e6db74 } /* Literal.String.Doc */
+.highlight pre .s2 { color: #e6db74 } /* Literal.String.Double */
+.highlight pre .se { color: #ae81ff } /* Literal.String.Escape */
+.highlight pre .sh { color: #e6db74 } /* Literal.String.Heredoc */
+.highlight pre .si { color: #e6db74 } /* Literal.String.Interpol */
+.highlight pre .sx { color: #e6db74 } /* Literal.String.Other */
+.highlight pre .sr { color: #e6db74 } /* Literal.String.Regex */
+.highlight pre .s1 { color: #e6db74 } /* Literal.String.Single */
+.highlight pre .ss { color: #e6db74 } /* Literal.String.Symbol */
+.highlight pre .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
+.highlight pre .vc { color: #f8f8f2 } /* Name.Variable.Class */
+.highlight pre .vg { color: #f8f8f2 } /* Name.Variable.Global */
+.highlight pre .vi { color: #f8f8f2 } /* Name.Variable.Instance */
+.highlight pre .il { color: #ae81ff } /* Literal.Number.Integer.Long */
