--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
 
-    <title>{% if page.title %}{{ page.title }} | El Blog de Alexander Mera {% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title }} | Alexander Mera {% else %}{{ site.title }}{% endif %}</title>
     <meta name="description"
           content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 180 }}{% else %}{{ site.description }}{% endif %}">
 
