--- a/_less/styles.less
+++ b/_less/styles.less
@@ -12,6 +12,10 @@ body {
   background-color: @clouds;
 }
 
+main {
+  margin-bottom: @line-height-computed;
+}
+
 .navbar-nav > li > a {
   font-weight: 300;
   text-transform: uppercase;
