--- a/css/blog.css
+++ b/css/blog.css
@@ -13303,6 +13303,9 @@ body {
   margin-top: 12px;
   background-color: #ecf0f1;
 }
+main {
+  margin-bottom: 25px;
+}
 .navbar-nav > li > a {
   font-weight: 300;
   text-transform: uppercase;
