--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,9 @@
     <meta name="description"
           content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 180 }}{% else %}{{ site.description }}{% endif %}">
 
-    <link rel="stylesheet" href="{{ '/css/blog.min.css' | prepend: site.baseurl }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="alternate" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" hreflang="es-co" />
+    <link rel="stylesheet" href="{{ '/css/blog.min.css' | prepend: site.baseurl }}" />
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
     <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
