--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,10 @@
     {% include header.html %}
 
     <div class="container" >
-        {{ content }}
+      <div class="col-sm-12 col-md-8">{{ content }}</div>
+      <div class="hidden-xs hidden-sm col-md-4">
+        <a class="twitter-timeline" href="https://twitter.com/alexmera" data-widget-id="602931683487313922">Tweets by @alexmera</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
     </div>
 
     {% include footer.html %}
